<resources>
    <string name="app_name">Hand Hunter</string>
    <string name="name_search_fragment" translatable="false">Search Fragment</string>
    <string name="name_search_filters_fragment" translatable="false">Search Filters Fragment</string>
    <string name="name_fragment_workplace_selection" translatable="false">Fragment workplace selection</string>
    <string name="name_fragment_location_selection" translatable="false">Fragment with selection country and region</string>
    <string name="name_fragment_specialization_selection" translatable="false">Fragment specialization selection</string>
    <string name="name_fragment_vacancy_info" translatable="false">Fragment vacancy info</string>
    <string name="name_fragment_favourite_vacancies" translatable="false">Fragment favourite vacancies</string>
    <string name="name_fragment_team_info" translatable="false">Fragment team info</string>

    <string name="vacancies_search">Поиск вакансий</string>
    <string name="filter_button">Фильтр поиска</string>
    <string name="search">Поиск</string>
    <string name="search_hint">Введите запрос</string>
    <string name="search_clear_icon">Иконка поиска/очистки</string>
    <string name="logo">Логотип</string>
    <string name="empty_search">Изображение без поиска</string>
    <string name="bad_internet">Нет интернета</string>
    <string name="bad_connection">Проверьте подключение к интернету</string>
    <string name="bad_request">Не удалось получить \nсписок вакансий</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="error_image">Изображение ошибки</string>
    <string name="error_text">Текст ошибки</string>
    <string name="message_text">Таких вакансий нет</string>
    <string name="salary_from">от </string>
    <string name="salary_to">до </string>
    <string name="no_salary">Зарплата не указана</string>

    <string name="item_bottom_navigation_menu_home">Главная</string>
    <string name="item_bottom_navigation_menu_favorites">Избранное</string>
    <string name="item_bottom_navigation_menu_team">Команда</string>

    <string name="team_title">Команда</string>
    <string name="team_subtitle">Над приложением\nработали</string>
    <string name="dev_name1">Игорь Старков</string>
    <string name="dev_name2">Варвара Шевчик</string>
    <string name="dev_name3">Ольга Девятловская</string>
    <string name="dev_name4">Никита Степаненко</string>
    <string name="dev_name5">Кирилл Матвеев</string>

    <string name="favourite_title">Избранное</string>
    <string name="content_description_error_message">Произошла ошибка</string>
    <string name="message_error_empty_data">Список пуст</string>
    <string name="message_error_could_not_get_data">Не удалось получить список вакансий</string>

    <string name="vacancy_info_title">Вакансия</string>
    <string name="vacancy_info_title_experience">Требуемый опыт</string>
    <string name="vacancy_info_title_description">Описание вакансии</string>
    <string name="vacancy_info_title_key_skills">Ключевые навыки</string>
    <string name="vacancy_info_menu_share">Поделиться</string>
    <string name="vacancy_info_menu_favourite">Избранное</string>
    <string name="vacancy_info_employer_logo_description">Логотип работодателя</string>
    <string name="vacancy_info_no_data_error">Вакансия не найдена или\nудалена</string>
    <string name="vacancy_info_server_error">Ошибка сервера</string>
    <string name="vacancy_info_no_salary">Зарплата не указана</string>
    <string name="vacancy_info_salary_from">от %s</string>
    <string name="vacancy_info_salary_to">до %s</string>
    <string name="vacancy_info_salary_total_string">%s %s %s %s</string>
    <string name="vacancy_info_gross_info_true">до вычета налогов</string>
    <string name="vacancy_info_gross_info_false">после вычета налогов</string>
    <string name="vacancy_info_save_to_database_error">Не удалось добавить вакансию в избранное</string>
    <string name="vacancy_info_delete_from_database_error">Не удалось удалить вакансию из избранного</string>

    <string name="location_country_toolbar_title">Выбор страны</string>
    <string name="location_region_toolbar_title">Выбор региона</string>
    <string name="location_hint">Введите регион</string>
    <string name="location_stub" translatable="false">Country</string>
    <string name="location_no_region_error">Такого региона нет</string>
    <string name="location_server_error">Не удалось получить список</string>

    <string name="choosing_place_of_work_toolbar">Выбор места работы</string>
    <string name="country_hint">Страна</string>
    <string name="region_hint">Регион</string>
    <string name="choose_button_text">Выбрать</string>

    <string name="vacancy_search_filters_title">Настройка фильтрации</string>
    <string name="vacancy_search_filters_place_of_work">Место работы</string>
    <string name="vacancy_search_filters_industry">Отрасль</string>
    <string name="vacancy_search_filters_salary_expected">Ожидаемая зарплата</string>
    <string name="vacancy_search_filters_enter_salary">Введите сумму</string>
    <string name="vacancy_search_filters_without_salary">Не показывать без зарплаты</string>
    <string name="vacancy_search_filters_accept">Применить</string>
    <string name="vacancy_search_filters_reset">Сбросить</string>
    =======
    <string name="location_country_toolbar_title">Выбор страны</string>
    <string name="location_region_toolbar_title">Выбор региона</string>
    <string name="location_hint">Введите регион</string>
    <string name="location_stub" translatable="false">Country</string>
    <string name="location_no_region_error">Такого региона нет</string>
    <string name="location_server_error">Не удалось получить список</string>

    <string name="choosing_place_of_work_toolbar">Выбор места работы</string>
    <string name="country_hint">Страна</string>
    <string name="region_hint">Регион</string>
    <string name="choose_button_text">Выбрать</string>

    <plurals name="vacancies_count">
        <item quantity="one">Найдено %d вакансия</item>
        <item quantity="few">Найдено %d вакансии</item>
        <item quantity="many">Найдено %d вакансий</item>
        <item quantity="other">Найдено %d вакансий</item>
    </plurals>
</resources>
