<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="?attr/mainBackgroundColor"
    tools:context=".features.team.presentation.ui.TeamInfoFragment"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/team_title"
        style="@style/toolbarTextStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="@dimen/margin_6x"
        android:text="@string/team_title"
        app:title="@string/team_title"
        app:titleTextAppearance="@style/toolbarTitleTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/team_subtitle"
        style="@style/textStyleBold32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_6x"
        android:textColor="?attr/mainTextColor"
        android:text="@string/team_subtitle"
        android:paddingStart="@dimen/margin_4x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/team_title"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/member_1"
        style="@style/teamTextStyleMedium16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_size_4x"
        android:layout_marginTop="@dimen/margin_8x"
        android:text="@string/dev_name1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/team_subtitle" />

    <TextView
        android:id="@+id/member_2"
        style="@style/teamTextStyleMedium16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_size_4x"
        android:layout_marginTop="@dimen/margin_4x"
        android:text="@string/dev_name2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/member_1" />

    <TextView
        android:id="@+id/member_3"
        style="@style/teamTextStyleMedium16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_size_4x"
        android:layout_marginTop="@dimen/margin_4x"
        android:text="@string/dev_name3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/member_2" />

    <TextView
        android:id="@+id/member_4"
        style="@style/teamTextStyleMedium16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_size_4x"
        android:layout_marginTop="@dimen/margin_4x"
        android:text="@string/dev_name4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/member_3" />

    <TextView
        android:id="@+id/member_5"
        style="@style/teamTextStyleMedium16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_size_4x"
        android:layout_marginTop="@dimen/margin_4x"
        android:text="@string/dev_name5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/member_4" />

</androidx.constraintlayout.widget.ConstraintLayout>


